Introduce foundational features for admin/public release notes, authentication, and content block management
Added services for release note handling, authentication, and error interception, with HTTP interceptors ( and ). Integrated new  models, proxy configuration, and block rendering functionality (). Introduced core modules for admin/public endpoints, reusable content block structures, and routing guards.